--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -174,46 +174,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "743b5e5e",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-08-06 23:47:50,681 - WARNING - Retrying (Retry(total=2, connect=None, read=None, redirect=None, status=None)) after connection broken by 'SSLError(FileNotFoundError(2, 'No such file or directory'))': /api/v4/futures/usdt/tickers\n",
+      "2025-08-06 23:47:50,729 - WARNING - Retrying (Retry(total=1, connect=None, read=None, redirect=None, status=None)) after connection broken by 'SSLError(FileNotFoundError(2, 'No such file or directory'))': /api/v4/futures/usdt/tickers\n",
+      "2025-08-06 23:47:50,772 - WARNING - Retrying (Retry(total=0, connect=None, read=None, redirect=None, status=None)) after connection broken by 'SSLError(FileNotFoundError(2, 'No such file or directory'))': /api/v4/futures/usdt/tickers\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "=== Gate.io API 연결 테스트 ===\n",
       "\n",
-      "1. 거래량 상위 10개 종목 조회...\n",
-      "✅ API 연결 성공!\n",
-      "거래량 상위 종목 10개 조회 완료\n",
-      "\n",
-      "📊 거래량 상위 5개 종목:\n",
-      "1. ETH_USDT\n",
-      "   가격: $3,589.2500\n",
-      "   24h 변동: -1.26%\n",
-      "   거래량: $8,962,456,384\n",
-      "\n",
-      "2. BTC_USDT\n",
-      "   가격: $113,867.3000\n",
-      "   24h 변동: -0.22%\n",
-      "   거래량: $5,055,694,090\n",
-      "\n",
-      "3. SOL_USDT\n",
-      "   가격: $164.0800\n",
-      "   24h 변동: -1.89%\n",
-      "   거래량: $781,821,838\n",
-      "\n",
-      "4. PROVE_USDT\n",
-      "   가격: $1.2141\n",
-      "   24h 변동: +102.49%\n",
-      "   거래량: $572,298,854\n",
-      "\n",
-      "5. XRP_USDT\n",
-      "   가격: $2.9487\n",
-      "   24h 변동: -2.88%\n",
-      "   거래량: $426,807,398\n",
-      "\n",
+      "1. 거래량 상위 10개 종목 조회...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-08-06 23:47:50,820 - ERROR - 거래 대금 상위 종목 조회 오류: HTTPSConnectionPool(host='api.gateio.ws', port=443): Max retries exceeded with url: /api/v4/futures/usdt/tickers (Caused by SSLError(FileNotFoundError(2, 'No such file or directory')))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "❌ API 연결 실패 또는 데이터 없음\n",
       "\n",
       "=== 테스트 완료 ===\n"
      ]
